--- a/process-mining-web/src/main/resources/application.properties
+++ b/process-mining-web/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=80
 
-spring.view.prefix:/WEB-INF/jsp/
-spring.view.suffix:.jsp
+#spring.view.prefix:/WEB-INF/jsp/
+#spring.view.suffix:.jsp
 
 application.message: Hello Phil
 
 # MONGODB (MongoProperties)
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=process-mining
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=process-mining
