Created first prototype and started layout Module 1

--- a/process-mining-web/src/main/resources/application.properties
+++ b/process-mining-web/src/main/resources/application.properties
@@ -9,3 +9,6 @@ application.message: Hello Phil
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=process-mining
+
+# TODO : Lembrar de reativar isso
+spring.thymeleaf.cache=false
