--- a/process-mining-web/pom.xml
+++ b/process-mining-web/pom.xml
@@ -60,6 +60,12 @@
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.4</version>
+		</dependency>
+				
 	</dependencies>
   
 </project>
