--- a/process-mining-web/pom.xml
+++ b/process-mining-web/pom.xml
@@ -59,12 +59,19 @@
 		<dependency>
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-data-mongodb</artifactId>
+  		  <version>1.2.3.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>1.8.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+				
 				
 	</dependencies>
   
