--- a/process-mining-web/pom.xml
+++ b/process-mining-web/pom.xml
@@ -71,7 +71,12 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.13.0</version>
 		</dependency>
-				
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
+						
 				
 	</dependencies>
   
