--- a/process-mining-web/src/main/resources/application.properties
+++ b/process-mining-web/src/main/resources/application.properties
@@ -12,3 +12,4 @@ application.message: Hello Phil
 
 # TODO : Lembrar de reativar isso
 spring.thymeleaf.cache=false
+spring.main.show_banner = false
