--- a/process-mining-web/pom.xml
+++ b/process-mining-web/pom.xml
@@ -76,6 +76,11 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.7</version>
+		</dependency>
 						
 				
 	</dependencies>
