--- a/process-mining-web/src/main/resources/application.properties
+++ b/process-mining-web/src/main/resources/application.properties
@@ -12,3 +12,8 @@ application.message: Hello Phil
 
 # TODO : Lembrar de reativar isso
 spring.thymeleaf.cache=false
+
+# MULTIPART (MultipartProperties)
+multipart.file-size-threshold=0
+multipart.max-file-size=10Mb
+multipart.max-request-size=60Mb
