--- a/process-mining-web/pom.xml
+++ b/process-mining-web/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.licursi.tcc</groupId>
   <artifactId>procmining.web</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>procmining-web</name>
   
