--- a/process-mining-web/src/main/resources/application.properties
+++ b/process-mining-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=80
+server.port=8070
 
 #spring.view.prefix:/WEB-INF/jsp/
 #spring.view.suffix:.jsp
@@ -6,9 +6,11 @@ server.port=80
 application.message: Hello Phil
 
 # MONGODB (MongoProperties)
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=process-mining
+spring.data.mongodb.host=ds045037.mongolab.com
+spring.data.mongodb.port=45037
+spring.data.mongodb.database=IbmCloud_kfk4tsro_e88bkhmu
+spring.data.mongodb.username=llicursi
+spring.data.mongodb.password=123456
 
 # TODO : Lembrar de reativar isso
 spring.thymeleaf.cache=false
